[fix] aside overflow

--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,10 @@ aside .contact-search{
 }
 
 
+aside .chat-list{
+    height: calc(100% - 240px);
+    overflow: scroll;
+}
 
 
 /* main box */
